# gitsmart

./: .env.example  .gitignore  COLLABORATIVE-WORKFLOW.md  LICENSE  README.md  install-hooks.sh  pyproject.toml  requirements.txt
.memories/: 2026-01-31-storage-architecture.md
gitsmart/: __init__.py  ai_provider.py  cli.py  config.py  core.py  exceptions.py  git_context.py  storage.py  utils.py
hooks/: post-commit
