[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitsmart"
version = "0.1.0"
description = "Your git repository's memory made searchable"
readme = "README.md"
authors = [
    {name = "GitSmart Team"},
]
license = {file = "LICENSE"}
keywords = ["git", "ai", "code-analysis", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "GitPython>=3.1.40",
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gitsmart = "gitsmart.cli:main"

[project.urls]
Homepage = "https://github.com/gitsmart/gitsmart"
Repository = "https://github.com/gitsmart/gitsmart"
Issues = "https://github.com/gitsmart/gitsmart/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "UP", "S", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]